# python-starter-kit

./: README.md  own_project.py  pyproject.toml
tests/: test_dummy.py
