[tool.poetry]
name = "{{project_name}}"
version = "0.1.0"
description = ""
authors = ["{{author}} <{{email}}>"]

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
mypy = "^0.761"
rope = "^0.14.0"
taskipy = "^1.0.1"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
post_test = "task lint"

lint = "task lint_pylint && task lint_mypy"
lint_pylint = "pylint tests {{project_name}}"
lint_mypy = "mypy tests {{project_name}}"

pre_publish = "./task test"
publish = "poetry publish --build"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
